<resources>
    <string name="app_name">Drift Home</string>
    <string name="d_app_or_divider">or</string>
    <string name="d_header_btn">History</string>
    <string name="web_server_client_id">769783667407-4jtuedlc1edvu61tgcbq2ppdom1sv88c.apps.googleusercontent.com</string>
    <string name="base_url">http://192.168.8.162:5000</string>

    <string name="d_signin_text1">Sign In</string>
    <string name="d_signin_text2">Email</string>
    <string name="d_signin_edittext1_placeholder">ex: john@gmail.com</string>
    <string name="d_signin_text3">Password</string>
    <string name="d_signin_btn1">Take me Home!</string>
    <string name="d_signin_btn2">Wait.. I’m new to this!</string>

    <string name="d_signup_text1">Sign Up</string>
    <string name="d_signup_text2">Name</string>
    <string name="d_signup_edittext1_placeholder">ex: John Doe</string>
    <string name="d_signup_text3">Email</string>
    <string name="d_signup_edittext2_placeholder">ex: john@gmail.com</string>
    <string name="d_signup_text4">Mobile</string>
    <string name="d_signup_edittext3_placeholder">ex: 07XXXXXXXX</string>
    <string name="d_signup_text5">Password</string>
    <string name="d_signup_edittext4_placeholder">Use a strong password</string>
    <string name="d_signup_btn1">Lets Gooo!</string>
    <string name="d_signup_btn2">Hey... I’m already registered!</string>

    <string name="d_otpVerification_verifyEmail">Verify the email</string>
    <string name="d_otpVerification_verifyLogin">Login Verification</string>
    <string name="d_otpVerification_text1">Enter the verification code sent to your email.</string>
    <string name="d_otpVerification_btn1">Verify</string>
    <string name="d_otpVerification_btn2">Resend Code</string>
    <string name="d_otpVerification_edittext1_placeholder">******</string>

    <string name="d_booking_text1">Booking in....</string>
    <string name="d_booking_text2">Drop location not assigned still.</string>
    <string name="d_booking_btn1">Searching....</string>
    <string name="d_booking_btn1_cancel">Cancel</string>
    <string name="d_booking_btn1_requesting">Requesting...</string>
    <string name="d_booking_text1_driverOnTheWay">Driver on the way...</string>
    <string name="d_booking_text1_driverArrived">Driver arrived</string>

    <string name="d_trip_btn1_tripStarted">Trip Started!</string>
    <string name="d_trip_btn1_tripEnded">Trip Ended!</string>
    <string name="d_trip_text1_destination">Destination</string>
    <string name="d_trip_text1_arrivedAt">Arrived At</string>
    <string name="d_trip_text2">Drop location not assigned still.</string>
    <string name="d_trip_text3">Your soul has been saved!</string>

    <string name="d_history_text1">No History Available</string>

    <string name="d_homeFragment_btn1_bookride">Book Ride</string>
    <string name="d_homeFragment_btn1_listening">listening...</string>
    <string name="d_homeFragment_btn1_insufficientCredit">Top up your account</string>
    <string name="d_homeFragment_btn1_completeProfile">Complete your Profile</string>
    <string name="d_homeFragment_btn2">Refresh</string>
    <string name="d_homeFragment_text1_bookride">Or say “Hey Buddy” to get started</string>
    <string name="d_homeFragment_text1_listening">say “Book Ride” to book your ride</string>
    <string name="d_homeFragment_text1_insufficientCredit">Please top up the account to continue the service</string>
    <string name="d_homeFragment_text1_completeProfile">Please complete your profile to activate the service.</string>

    <string name="d_settingsFragment_text1">Settings</string>
    <string name="d_settingsFragment_text2">Range</string>
    <string name="d_settingsFragment_text3">Km</string>
    <string name="d_settingsFragment_text4">Enter the Top Up amount</string>
    <string name="d_settingsFragment_edittext1">ex: 40</string>
    <string name="d_settingsFragment_edittext2">ex: 2000</string>
    <string name="d_settingsFragment_btn1">My Credit Card</string>
    <string name="d_settingsFragment_btn2">Logout</string>
    <string name="d_settingsFragment_btn3">Delete my account</string>
    <string name="d_settingsFragment_btn4">Top Up my account</string>
    <string name="d_settingsFragment_btn5">Edit</string>
    <string name="d_settingsFragment_btn6">Set Range</string>
    <string name="d_settingsFragment_btn7">Proceed</string>
    <string name="d_settingsFragment_setting1">Always Home if in range</string>
    <string name="d_settingsFragment_setting1_body">If this setting is “on”, the drop location will default to home, if home is within specified range. If not, it will default to the nearest address. Credit card is needed.</string>
    <string name="d_settingsFragment_setting2">Shake to Book Ride</string>
    <string name="d_settingsFragment_setting2_body">If this setting is “on”, a ride can be booked from Home menu just by shaking the phone. (Note: only for supported devices)</string>
    <string name="d_settingsFragment_setting3">Auto close the App</string>
    <string name="d_settingsFragment_setting3_body">If this setting is “on”, the application will automatically close with a timeout after the trip has ended.</string>
    <string name="d_settingsFragment_setting4">Voice Notifications</string>
    <string name="d_settingsFragment_setting4_body">If this setting is “on”, the application will send out voice notifications regarding the ride status.</string>

    <string name="d_profileFragment_text1">Profile</string>
    <string name="d_profileFragment_text2">My Addresses</string>
    <string name="d_profileFragment_text3">Name</string>
    <string name="d_profileFragment_edittext1_placeholder">ex: John Doe</string>
    <string name="d_profileFragment_text4">Date of Birth</string>
    <string name="d_profileFragment_edittext2_placeholder">Select a date</string>
    <string name="d_profileFragment_text5">Mobile</string>
    <string name="d_profileFragment_edittext3_placeholder">ex. 0771231234</string>
    <string name="d_profileFragment_text6">Gender</string>
    <string-array name="d_profileFragment_genderSpinner">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="d_profileFragment_text7">Email</string>
    <string name="d_profileFragment_edittext5_placeholder">ex: john@gmail.com</string>
    <string name="d_profileFragment_btn1">Save</string>

    <string name="d_creditCard_text1">My Credit Card</string>

    <string name="d_addCreditCardFragment_text2">Card Number</string>
    <string name="d_addCreditCardFragment_text3">Expiry Date</string>
    <string name="d_addCreditCardFragment_text4">Cvv</string>
    <string name="d_addCreditCardFragment_text5_placeholder">#### #### #### ####</string>
    <string name="d_addCreditCardFragment_text6_placeholder">MM/YY</string>
    <string name="d_addCreditCardFragment_text7_placeholder">###</string>
    <string name="d_addCreditCardFragment_btn">Add Card</string>

    <string name="d_viewCreditCardFragment_text1">4217 #### #### ####</string>
    <string name="d_viewCreditCardFragment_text2">12/28</string>
    <string name="d_viewCreditCardFragment_btn">Remove Card</string>

    <string name="d_driverCardFragment_text1">Name:</string>
    <string name="d_driverCardFragment_text2">Vehicle:</string>
    <string name="d_driverCardFragment_text3n4_placeholder">_________________________</string>

    <string name="d_historyCardFragment_text1">Date:</string>
    <string name="d_historyCardFragment_text2">Name:</string>
    <string name="d_historyCardFragment_text3">Vehicle:</string>
    <string name="d_historyCardFragment_text_placeholder">_________________________</string>
    <string name="d_historyCardFragment_btn">Give Feedback</string>
    <string name="d_historyCardFragment_btn_given">Feedback Given</string>

    <string name="d_feedbackBottomSheet_text1">Rate The Saviour</string>
    <string name="d_feedbackBottomSheet_text2">Enter your feedback</string>
    <string name="d_feedbackBottomSheet_btn1">Submit</string>

    <string name="d_tripFareFragment_text1">Total Fare</string>
    <string name="d_tripFareFragment_text2">Balance:</string>
    <string name="d_tripFareFragment_text3n4_placeholder">Rs._______</string>
    <string name="d_tripFareFragment_btn">Back To Home</string>

    <string name="d_addressList_text1">Address List</string>
    <string name="d_addressList_btn1">+ Add address</string>
    <string name="d_addressList_text2">***Choose drop locations that are wide apart to ensure maximum area coverage to minimize costs***</string>
    <string name="d_addressList_text3">No Locations Added</string>

    <string name="d_addressCard_text1">2, Havelock Road, Colombo 03, Colombo</string>
    <string name="d_addressCard_btn1">Home</string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>