<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addCreditCardContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddCreditCardFragment">

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:fontFamily="@font/lexend_deca"
        android:hint="@string/d_addCreditCardFragment_text5_placeholder"
        android:inputType="text"
        android:textColorHint="@color/d_gray2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_addCreditCardFragment_text2"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_addCreditCardFragment_text3"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/lexend_deca"
        android:hint="@string/d_addCreditCardFragment_text6_placeholder"
        android:inputType="text"
        android:textColorHint="@color/d_gray2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText"
        app:layout_constraintStart_toStartOf="@+id/textView33"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_addCreditCardFragment_text4"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText6"
        app:layout_constraintTop_toBottomOf="@+id/editTextText6" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/lexend_deca"
        android:hint="@string/d_addCreditCardFragment_text7_placeholder"
        android:inputType="text"
        android:textColorHint="@color/d_gray2"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextText6"
        app:layout_constraintStart_toStartOf="@+id/textView34"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <Button
        android:id="@+id/button16"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lexend_deca"
        android:text="@string/d_addCreditCardFragment_btn"
        android:textColor="@color/d_blue"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/d_button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7"
        app:strokeColor="@color/d_blue" />
</androidx.constraintlayout.widget.ConstraintLayout>