<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_text1"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_settings_black_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/d_lightBlue2"
                android:drawableRight="@drawable/forward"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_btn1"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="@dimen/d_button_corner_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting1_body"
                android:textColor="@color/d_gray3"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/button14"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/switch1"
                app:layout_constraintTop_toBottomOf="@+id/switch1" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="0dp"
                android:layout_height="@dimen/d_setting_switch_height"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting1"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/button14"
                app:layout_constraintStart_toStartOf="@+id/button14"
                app:layout_constraintTop_toBottomOf="@+id/button14" />

            <Switch
                android:id="@+id/switch3"
                android:layout_width="0dp"
                android:layout_height="@dimen/d_setting_switch_height"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting2"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView27"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView27"
                app:layout_constraintTop_toBottomOf="@+id/textView27" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting2_body"
                android:textColor="@color/d_gray3"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/switch3"
                app:layout_constraintStart_toStartOf="@+id/switch3"
                app:layout_constraintTop_toBottomOf="@+id/switch3" />

            <Switch
                android:id="@+id/switch4"
                android:layout_width="0dp"
                android:layout_height="@dimen/d_setting_switch_height"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting3"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView28"
                app:layout_constraintStart_toStartOf="@+id/textView28"
                app:layout_constraintTop_toBottomOf="@+id/textView28" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting3_body"
                android:textColor="@color/d_gray3"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/switch4"
                app:layout_constraintStart_toStartOf="@+id/switch4"
                app:layout_constraintTop_toBottomOf="@+id/switch4" />

            <Switch
                android:id="@+id/switch5"
                android:layout_width="0dp"
                android:layout_height="@dimen/d_setting_switch_height"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting4"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView29"
                app:layout_constraintStart_toStartOf="@+id/textView29"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting4_body"
                android:textColor="@color/d_gray3"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/switch5"
                app:layout_constraintStart_toStartOf="@+id/switch5"
                app:layout_constraintTop_toBottomOf="@+id/switch5" />

            <Switch
                android:id="@+id/switch6"
                android:layout_width="0dp"
                android:layout_height="@dimen/d_setting_switch_height"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting5"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/textView30"
                app:layout_constraintStart_toStartOf="@+id/textView30"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/d_settingsFragment_setting5_body"
                android:textColor="@color/d_gray3"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/switch6"
                app:layout_constraintStart_toStartOf="@+id/switch6"
                app:layout_constraintTop_toBottomOf="@+id/switch6" />

            <Button
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/d_red1"
                android:text="@string/d_settingsFragment_btn2"
                app:cornerRadius="@dimen/d_button_corner_radius"
                app:layout_constraintEnd_toEndOf="@+id/textView31"
                app:layout_constraintStart_toStartOf="@+id/textView31"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/d_navbar_height"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button15" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>